--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,130 @@
 # Q100 Variant Benchmark Analysis Pipeline Configuration
 
+# Chromosomes for per-chromosome analysis
+chromosomes:
+  chm13:
+    - chr1
+    - chr2
+    - chr3
+    - chr4
+    - chr5
+    - chr6
+    - chr7
+    - chr8
+    - chr9
+    - chr10
+    - chr11
+    - chr12
+    - chr13
+    - chr14
+    - chr15
+    - chr16
+    - chr17
+    - chr18
+    - chr19
+    - chr20
+    - chr21
+    - chr22
+    - chrX
+    - chrY
+  grch37:
+    - "1"
+    - "2"
+    - "3"
+    - "4"
+    - "5"
+    - "6"
+    - "7"
+    - "8"
+    - "9"
+    - "10"
+    - "11"
+    - "12"
+    - "13"
+    - "14"
+    - "15"
+    - "16"
+    - "17"
+    - "18"
+    - "19"
+    - "20"
+    - "21"
+    - "22"
+    - "X"
+    - "Y"
+  grch38:
+    - chr1
+    - chr2
+    - chr3
+    - chr4
+    - chr5
+    - chr6
+    - chr7
+    - chr8
+    - chr9
+    - chr10
+    - chr11
+    - chr12
+    - chr13
+    - chr14
+    - chr15
+    - chr16
+    - chr17
+    - chr18
+    - chr19
+    - chr20
+    - chr21
+    - chr22
+    - chrX
+    - chrY
+
+# Benchmark sets for RTG vcfstats analysis
+benchmarksets:
+  # Draft v1.1 benchmark sets (already filtered to benchmark regions)
+  v5q_chm13_smvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/CHM13_HG002-T2TQ100v1.1-dipz2k_smvar-excluded/CHM13v2.0_HG2-T2TQ100-V1.1_smvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  v5q_chm13_stvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/CHM13_HG002-T2TQ100v1.1-dipz2k_stvar-excluded/CHM13v2.0_HG2-T2TQ100-V1.1_stvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  v5q_grch37_smvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/GRCh37_HG002-T2TQ100v1.1-dipz2k_smvar-excluded/GRCh37_HG2-T2TQ100-V1.1_smvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  v5q_grch37_stvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/GRCh37_HG002-T2TQ100v1.1-dipz2k_stvar-excluded/GRCh37_HG2-T2TQ100-V1.1_stvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  v5q_grch38_smvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/GRCh38_HG002-T2TQ100v1.1-dipz2k_smvar-excluded/GRCh38_HG2-T2TQ100-V1.1_smvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  v5q_grch38_stvar:
+    vcf: "data/20250117_v0.020_HG002Q100v1.1/draft_benchmarksets/GRCh38_HG002-T2TQ100v1.1-dipz2k_stvar-excluded/GRCh38_HG2-T2TQ100-V1.1_stvar_dipcall-z2k_bench-vars.vcf.gz"
+    bed: null
+  # Historical benchmark sets (need filtering)
+  v421_grch38_smvar:
+    vcf: "data/benchmarksets/HG002_GRCh38_1_22_v4.2.1_benchmark.vcf.gz"
+    bed: "data/benchmarksets/HG002_GRCh38_1_22_v4.2.1_benchmark_noinconsistent.bed"
+  cmrg_grch38_smvar:
+    vcf: "data/benchmarksets/HG002_GRCh38_CMRG_smallvar_v1.00.vcf.gz"
+    bed: "data/benchmarksets/HG002_GRCh38_CMRG_smallvar_v1.00.bed"
+  cmrg_grch38_sv:
+    vcf: "data/benchmarksets/HG002_GRCh38_CMRG_SV_v1.00.vcf.gz"
+    bed: "data/benchmarksets/HG002_GRCh38_CMRG_SV_v1.00.bed"
+  v06_grch38_sv:
+    vcf: "data/benchmarksets/HG002_SVs_Tier1_v0.6.vcf.gz"
+    bed: "data/benchmarksets/HG002_SVs_Tier1_noVDJorXorY_v0.6.2.bed"
+  tr_grch38_smvar:
+    vcf: "data/benchmarksets/HG002_GRCh38_TandemRepeats_v1.0.1.vcf.gz"
+    bed: "data/benchmarksets/HG002_GRCh38_TandemRepeats_v1.0.1_Tier1.bed.gz"
+
 vcf_files:
   chm13_stvar: "data/NIST_HG002_DraftBenchmark_defrabbV0.020-20250117/CHM13v2.0_HG2-T2TQ100-V1.1_stvar.vcf.gz"
+  chm13_smvar: "data/NIST_HG002_DraftBenchmark_defrabbV0.020-20250117/CHM13v2.0_HG2-T2TQ100-V1.1_smvar.vcf.gz"
 
 bed_files:
   chm13_stvar: "data/NIST_HG002_DraftBenchmark_defrabbV0.020-20250117/CHM13v2.0_HG2-T2TQ100-V1.1_stvar.benchmark.bed"
+  chm13_smvar: "data/NIST_HG002_DraftBenchmark_defrabbV0.020-20250117/CHM13v2.0_HG2-T2TQ100-V1.1_smvar.benchmark.bed"
 
 outputs:
   sv_len: "sv_len.tsv"
+  rtg_stats_dir: "results/rtg_stats"
+  subset_vcf_dir: "results/subset_vcfs"
