Add genomic context handling and variant counting functionality
- Updated Snakefile to include context count inputs in the workflow.
- Created bedtools.yaml for environment dependencies.
- Enhanced common.smk with genomic stratification context paths.
- Implemented new rules in vcf_processing.smk for downloading stratification files and counting variants by type.
- Added count_variants_by_type.py script for processing variant counts from VCF files.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -20,5 +20,6 @@ rule all:
     input:
         get_sv_len_inputs,
         get_subset_stats_inputs,
+        get_context_count_inputs,
 
 include: "rules/vcf_processing.smk"
