--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -56,6 +56,8 @@ rule all:
         get_context_coverage_inputs,
         "results/context_coverage/all_context_coverage.tsv",
         get_all_reference_files,
+        get_exclusion_table_inputs,
 
 
 include: "rules/vcf_processing.smk"
+include: "rules/exclusions.smk"
