--- a/workflow/envs/bedtools.yaml
+++ b/workflow/envs/bedtools.yaml
@@ -1,7 +1,8 @@
 channels:
   - conda-forge
   - bioconda
+channel_priority: strict
 dependencies:
   - bcftools=1.22
   - bedtools=2.31.1
-  - python>3.9
+  - python>=3.9
