Add external evaluation analysis for small and structural variants
- Created a new QMD file for external evaluation of small and structural variants.
- Implemented data loading and processing for evaluator curations.
- Added visualizations for small and structural variant evaluations by callset and strata.
- Included summary statistics and tables for variants categorized as not correct or unsure in benchmark.
- Saved generated plots to the manuscript figures directory.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,8 @@
 project:
   type: manuscript
+  render:
+    - "results/*qmd"
+    - "!scratch/"
 bibliography: manuscript/references.bib
 citations-hover: true
 format:
