--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -47,6 +47,7 @@ onerror:
 include: "rules/common.smk"
 include: "rules/downloads.smk"
 include: "rules/vcf_processing.smk"
+include: "rules/ref_processing.smk"
 include: "rules/var_tables.smk"
 include: "rules/exclusions.smk"
 
@@ -55,3 +56,7 @@ rule all:
     input:
         get_var_table_inputs,
         get_exclusion_table_inputs,
+        expand(
+            "results/ref_genome_sizes/{ref}_size.tsv",
+            ref=["GRCh37", "GRCh38", "CHM13v2.0"],
+        ),
