--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -50,12 +50,16 @@ include: "rules/vcf_processing.smk"
 include: "rules/ref_processing.smk"
 include: "rules/var_tables.smk"
 include: "rules/exclusions.smk"
+include: "rules/strat_metrics.smk"
+include: "rules/var_counts.smk"
 
 
 rule all:
     input:
         get_var_table_inputs,
         get_exclusion_table_inputs,
+        get_strat_metrics_inputs,
+        get_var_counts_inputs,
         expand(
             "results/ref_genome_sizes/{ref}_size.tsv",
             ref=["GRCh37", "GRCh38", "CHM13v2.0"],
