--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Lint workflow
         shell: bash -l {0}
         run: |
-          snakemake --lint
+          make lint
 
   Formatting:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
       - name: Check Snakefile formatting
         shell: bash -l {0}
         run: |
-          snakefmt --check workflow/
+          make format-check
 
   Dry-Run:
     runs-on: ubuntu-latest
