Add benchmark and exclusion datasets for GRCh38 debug subset v5.0q
- Introduced new BED and VCF files for structural and small variant benchmarks.
- Added exclusion regions for various contexts including gaps, flanks, and tandem repeats.
- Created a summary JSON file detailing dataset constraints, regions, and statistics.
- Updated Snakefile to reflect changes in output file naming conventions for genomic context metrics.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -84,7 +84,7 @@ rule all:
         ),
         ## Benchmarkset variant counts by type and difficult region stratifications
         expand(
-            "results/genomic_context/{benchmark}/combined_metrics.csv",
+            "results/genomic_context/{benchmark}/genomic_context_coverage_table.csv",
             benchmark=BENCHMARK,
         ),
         ## Per-exclusion impact: BED metrics + variant counts
