Update workflow to use .test directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,8 @@ jobs:
       - name: run workflow
         uses: snakemake/snakemake-github-action@v2
         with:
-          directory: "."
-          snakefile: "workflow/Snakefile"
+          directory: .test
+          snakefile: workflow/Snakefile
           args: >-
             --conda-cleanup-pkgs cache
             --software-deployment-method conda
