--- a/workflow/envs/plotsr.yaml
+++ b/workflow/envs/plotsr.yaml
@@ -4,10 +4,10 @@ channels:
 channel_priority: strict
 dependencies:
   - python=3.11
-  - minimap2=2.28
-  - samtools=1.22
-  - syri=1.6.3
-  - plotsr=1.1.0
+  - bioconda:minimap2=2.28
+  - bioconda:samtools=1.22
+  - bioconda:syri=1.7.1
+  - bioconda:plotsr=1.1.1
   - matplotlib=3.9.2
   - pillow=11.0.0
   - pandas<2.0  # pandas 2.0+ CoW causes SyRI crash (read-only array in Cython)
