--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -66,7 +66,7 @@ rule all:
         ),
         expand(
             "results/ref_genome_sizes/{ref}_size.tsv",
-            ref=REF,
+            ref= ["GRCh37", "GRCh38", "CHM13v2.0"],
         ),
         expand(
             "results/genomic_context/{benchmark}/genomic_context_coverage_table.csv",
